force-app/main/default/objects/Quiz_Entry__c/Quiz_Entry__c.object-meta.xml
<CustomObject>
    <label>Quiz Entry</label>
    <nameField>
        <label>Quiz Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quiz Entrys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>