force-app/main/default/objects/Quiz_Entry__c/fields/Entrant_Name__c.field-meta.xml
<CustomField>
    <fullName>Entrant_Name__c</fullName>
    <label>Entrant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>