force-app/main/default/objects/Quiz_Entry__c/fields/Selected_Answer__c.field-meta.xml
<CustomField>
    <fullName>Selected_Answer__c</fullName>
    <label>Selected Answer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>