force-app/main/default/objects/Quiz_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Entrant_Name__c</columns>
    <columns>Selected_Answer__c</columns>
    <columns>Is_Correct__c</columns>
    <columns>Is_Winner__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>